[package]
name = "osstrtools-fix"
version = "0.2.3"
authors = ["rabite0", "heipiao233"]
edition = "2021"
description = "Additional helper methods for OsStr"
homepage = "https://github.com/heipiao233/osstrtools"
repository = "https://github.com/heipiao233/osstrtools"
readme = "README.md"
license = "WTFPL"
keywords = ["unix", "linux", "filename", "osstr", "osstring"]
categories = ["command-line-utilities"]

[features]
default = []
windows = ["os_str_bytes"]

[dependencies]
itertools = "0.8.2"
os_str_bytes = { version = "1.0", optional = true }
